# rarser

./: .env  Cargo.toml  output.txt  table  test1.txt  test2.txt
src/: main.rs  model.rs  models.rs  rarser.rs
