[package]
name = "rarser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = "0.7.4"
jsonwebtoken = "9.2.0"
regex = "1.10.3"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = "0.7.3"
tokio = { version = "1.36.0", features = ["full"] }
