[package]
name = "rarser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
lazy_static = "1.4.0"
mysql = "25.0.1"
office = "0.8.1"
rayon = "1.9.0"
regex = "1.10.3"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "json", "postgres", "mysql"] }
tokio = { version = "1.36.0", features = ["full"] }
